--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
         <input type="radio" name="radio" id="random" checked="true">
        
       </label>
-      <label class="container">Contagious
+      <label class="container">contiguous
         <input type="radio" name="radio" id="cont">
       
       </label>
